<resources>
    <string name="app_name">Ning Kang Yuan</string>

    <string name="label_data">Data:</string>
    <string name="label_send">Send:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="send">Send</string>
    <string name="uuid_service">service UUID</string>
    <string name="uuid_write">write UUID</string>
    <string name="uuid_read">read UUID</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>


    <string name="action_settings">Set up</string>
    <string name="action_about">about</string>

    <string name="button_audio">Audio</string>
    <string name="button_video">Video</string>


    <string name="setting_title">Set up</string>
    <string name="setting_net">network</string>
    <string name="setting_voe">voice call</string>
    <string name="setting_vie">Video call</string>
    <string name="setting_live">Interactive live broadcast</string>
    <string name="setting_other">Other</string>

    <string name="setting_vie_crop_key">setting_vie_crop_key</string>
    <string name="setting_vie_crop">Picture clipping</string>

    <string name="setting_vie_quality_key">setting_vie_quality_key</string>
    <string name="setting_vie_quality">Video definition</string>
    <string-array name="setting_vie_quality_entries"> 
        <item>Default</item> 
        <item>Low</item> 
        <item>Medium</item> 
        <item>High</item> 
        <item>480P</item> 
        <item>720P</item>
    </string-array>
    <string-array name="setting_vie_quality_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
        <item>3</item> 
        <item>4</item> 
        <item>5</item> 
    </string-array>


    <string name="setting_vie_frame_scale_type_key">setting_vie_frame_scale_type_key</string>
    <string name="setting_vie_frame_scale_type">Zoom mode</string>
    <string-array name="setting_vie_frame_scale_type_entries"> 
        <item>FIT</item> 
        <item>FILL</item> 
        <item>BALANCED</item> 
    </string-array>
    <string-array name="setting_vie_frame_scale_type_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
    </string-array>

    <string name="setting_vie_frame_rate_key">setting_vie_frame_rate_key</string>
    <string name="setting_vie_frame_rate">Video fps</string>
    <string-array name="setting_vie_frame_rate_entries"> 
        <item>5</item> 
        <item>10</item> 
        <item>15</item> 
        <item>20</item> 
        <item>25</item> 
    </string-array>
    <string-array name="setting_vie_frame_rate_values"> 
        <item>5</item> 
        <item>10</item> 
        <item>15</item> 
        <item>20</item> 
        <item>25</item> 
    </string-array>


    <string-array name="setting_vie_hw_encoder_entries"> 
        <item>automatic</item> 
        <item>Disable</item> 
        <item>force</item> 
    </string-array>
    <string-array name="setting_vie_hw_encoder_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
    </string-array>

    <string-array name="setting_other_device_rotation_entries"> 
        <item>0</item> 
        <item>90</item> 
        <item>180</item> 
        <item>270</item> 
    </string-array>
    <string-array name="setting_other_device_rotation_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
        <item>3</item> 
    </string-array>

    <string-array name="setting_vie_hw_decoder_entries"> 
        <item>automatic</item> 
        <item>Disable</item> 
        <item>force</item> 
    </string-array>
    <string-array name="setting_vie_hw_decoder_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
    </string-array>


    <string-array name="setting_voe_audio_effect_entries"> 
        <item>Disable</item> 
        <item>SDK Built-In</item> 
        <item>Platform Built-In</item> 
    </string-array>
    <string-array name="setting_voe_audio_effect_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
    </string-array>

    <string name="setting_other_device_default_rotation_key">setting_other_device_default_rotation_key</string>
    <string name="setting_other_device_default_rotation">Device default rotation angle(Use of special equipment)</string>

    <string name="setting_other_device_rotation_fixed_offset_key">setting_other_device_rotation_fixed_offset_key</string>
    <string name="setting_other_device_rotation_fixed_offset">Device rotation angle correction(Use of special equipment)</string>

    <string name="setting_vie_rotation_key">setting_vie_rotation_key</string>
    <string name="setting_vie_rotation">Picture rotation</string>

    <string name="setting_vie_default_front_camera_key">setting_vie_default_front_camera_key</string>
    <string name="setting_vie_default_front_camera">Default front camera</string>

    <string name="setting_vie_hw_encoder_key">setting_vie_hw_encoder_key</string>
    <string name="setting_vie_hw_encoder">Hardware coding(Only part of the device support)</string>

    <string name="setting_vie_hw_decoder_key">setting_vie_hw_decoder_key</string>
    <string name="setting_vie_hw_decoder">Hardware decoding(Only part of the device support)</string>

    <string name="setting_other_server_record_audio_key">setting_other_server_record_audio_key</string>
    <string name="setting_other_server_record_audio">Audio recording</string>

    <string name="setting_other_server_record_video_key">setting_other_server_record_video_key</string>
    <string name="setting_other_server_record_video">Video server recording</string>

    <string name="setting_voe_call_proximity_key">setting_voe_call_proximity_key</string>
    <string name="setting_voe_call_proximity">Turn off the screen during the call</string>

    <string name="setting_voe_muted_key">setting_voe_muted_key</string>
    <string name="setting_voe_muted">Voice stream mute processing</string>

    <string name="setting_vie_muted_key">setting_vie_muted_key</string>
    <string name="setting_vie_muted">Silent video stream processing</string>

    <string name="setting_vie_fps_reported_key">setting_vie_fps_reported_key</string>
    <string name="setting_vie_fps_reported">Fps report</string>

    <string name="setting_live_status_key">setting_live_status_key</string>
    <string name="setting_live_status">Interactive live broadcast</string>

    <string name="setting_live_url_key">setting_live_url_key</string>
    <string name="setting_live_url">Bypass direct current address</string>

    <string name="setting_vie_max_bitrate_key">setting_vie_max_bitrate_key</string>
    <string name="setting_vie_max_bitrate">Maximum Bitrate(Kbps)</string>


    <string name="setting_voe_audio_aec_key">setting_voe_audio_aec_key</string>
    <string name="setting_voe_audio_aec">Echo reduction</string>

    <string name="setting_voe_audio_agc_key">setting_voe_audio_agc_key</string>
    <string name="setting_voe_audio_agc">automatic gain</string>

    <string name="setting_voe_audio_ns_key">setting_voe_audio_ns_key</string>
    <string name="setting_voe_audio_ns">noise reduction</string>

    <string name="setting_voe_report_speaker_key">setting_voe_audio_report_speaker_key</string>
    <string name="setting_voe_report_speaker">Real-time reporting to the user</string>

    <string name="setting_net_proxy_key">setting_net_proxy_key</string>
    <string name="setting_net_proxy">Network agent</string>

    <string name="setting_net_proxy_user_name_key">setting_net_proxy_user_name_key</string>
    <string name="setting_net_proxy_user_name">User name</string>

    <string name="setting_net_proxy_user_password_key">setting_net_proxy_user_password_key</string>
    <string name="setting_net_proxy_user_password">Password</string>

    <string name="setting_net_proxy_addr_ip_key">setting_net_proxy_addr_ip_key</string>
    <string name="setting_net_proxy_addr_ip">address</string>

    <string name="setting_net_proxy_addr_port_key">setting_net_proxy_addr_port_key</string>
    <string name="setting_net_proxy_addr_port">port</string>


    <string name="about_title">about</string>
    <string name="about_nrtc_sdk">NRTC SDK</string>
    <string name="about_nrtc_demo">NRTC Demo</string>

    <string name="about_nrtc_sdk_version_name_key">about_nrtc_version_name_key</string>
    <string name="about_nrtc_sdk_version_name">Version Name</string>

    <string name="about_nrtc_sdk_version_code_key">about_nrtc_version_code_key</string>
    <string name="about_nrtc_sdk_version_code">Version Code</string>

    <string name="about_nrtc_sdk_build_type_key">about_nrtc_build_type_key</string>
    <string name="about_nrtc_sdk_build_type">Build Type</string>

    <string name="about_nrtc_sdk_build_time_key">about_nrtc_build_time_key</string>
    <string name="about_nrtc_sdk_build_time">Build Date</string>

    <string name="about_nrtc_sdk_build_tag_key">about_nrtc_build_tag_key</string>
    <string name="about_nrtc_sdk_build_tag">Build Revision</string>

    <string name="about_nrtc_sdk_build_branch_key">about_nrtc_sdk_build_branch_key</string>
    <string name="about_nrtc_sdk_build_branch">Build Branch</string>

    <string name="about_nrtc_sdk_build_host_key">about_nrtc_sdk_build_host_key</string>
    <string name="about_nrtc_sdk_build_host">Build Host</string>

    <string name="about_nrtc_sdk_version_server_env_key">about_nrtc_sdk_version_server_env_key</string>
    <string name="about_nrtc_sdk_version_server_env">Server</string>

    <string name="about_nrtc_demo_version_name_key">about_nrtc_demo_version_name_key</string>
    <string name="about_nrtc_demo_version_name">Version Name</string>

    <string name="about_nrtc_demo_version_code_key">about_nrtc_demo_version_code_key</string>
    <string name="about_nrtc_demo_version_code">Version Code</string>

    <string name="about_nrtc_demo_version_server_env_key">about_nrtc_demo_version_server_env_key</string>
    <string name="about_nrtc_demo_version_server_env">Server</string>


    <string name="button_call">Call</string>
    <string name="button_handup">Hang up</string>

    <string name="button_start_record">start recording</string>
    <string name="button_stop_record">Stop recording</string>

    <string name="button_mute">Mute</string>
    <string name="button_speaker">speaker</string>

    <string name="button_camera">Camera</string>

    <string name="button_switch_camera">Switch camera</string>
    <string name="button_switch_render">Switching screen</string>
    <string name="button_switch_mode">Switching mode</string>

    <string name="button_snapshot">screenshot</string>
</resources>