<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/setting_voe">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_voe_call_proximity_key"
            android:summary="Open distance sensor in voice call"
            android:title="@string/setting_voe_call_proximity" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_voe_report_speaker_key"
            android:summary="Report to the user in real time while talking."
            android:title="@string/setting_voe_report_speaker" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/setting_voe_audio_effect_entries"
            android:entryValues="@array/setting_voe_audio_effect_values"
            android:key="@string/setting_voe_audio_aec_key"
            android:title="@string/setting_voe_audio_aec" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/setting_voe_audio_effect_entries"
            android:entryValues="@array/setting_voe_audio_effect_values"
            android:key="@string/setting_voe_audio_agc_key"
            android:title="@string/setting_voe_audio_agc" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/setting_voe_audio_effect_entries"
            android:entryValues="@array/setting_voe_audio_effect_values"
            android:key="@string/setting_voe_audio_ns_key"
            android:title="@string/setting_voe_audio_ns" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_vie">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_vie_crop_key"
            android:summary="In a double talk when the screen according to the other side of the screen"
            android:title="@string/setting_vie_crop" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_vie_rotation_key"
            android:summary="Refer to their own and other equipment angle rotation screen"
            android:title="@string/setting_vie_rotation" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_vie_default_front_camera_key"
            android:summary="In video call priority use of the front camera"
            android:title="@string/setting_vie_default_front_camera" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_vie_fps_reported_key"
            android:summary="Whether the report frame rate video call"
            android:title="@string/setting_vie_fps_reported" />

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="@string/setting_vie_max_bitrate_key"
            android:title="@string/setting_vie_max_bitrate" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_vie_hw_encoder_entries"
            android:entryValues="@array/setting_vie_hw_encoder_values"
            android:key="@string/setting_vie_hw_encoder_key"
            android:title="@string/setting_vie_hw_encoder" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_vie_hw_decoder_entries"
            android:entryValues="@array/setting_vie_hw_decoder_values"
            android:key="@string/setting_vie_hw_decoder_key"
            android:title="@string/setting_vie_hw_decoder" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_vie_quality_entries"
            android:entryValues="@array/setting_vie_quality_values"
            android:key="@string/setting_vie_quality_key"
            android:title="@string/setting_vie_quality" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_vie_frame_scale_type_entries"
            android:entryValues="@array/setting_vie_frame_scale_type_values"
            android:key="@string/setting_vie_frame_scale_type_key"
            android:title="@string/setting_vie_frame_scale_type" />


        <ListPreference
            android:defaultValue="15"
            android:entries="@array/setting_vie_frame_rate_entries"
            android:entryValues="@array/setting_vie_frame_rate_values"
            android:key="@string/setting_vie_frame_rate_key"
            android:title="@string/setting_vie_frame_rate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_live">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_live_status_key"
            android:summary="In the multiplayer mode to live streaming"
            android:title="@string/setting_live_status" />

        <EditTextPreference
            android:defaultValue=""
            android:inputType="text"
            android:key="@string/setting_live_url_key"
            android:title="@string/setting_live_url" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_net">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_net_proxy_key"
            android:summary="Using network agents(SOCKS5)"
            android:title="@string/setting_net_proxy" />

        <EditTextPreference
            android:dependency="@string/setting_net_proxy_key"
            android:key="@string/setting_net_proxy_user_name_key"
            android:title="@string/setting_net_proxy_user_name" />

        <EditTextPreference
            android:dependency="@string/setting_net_proxy_key"
            android:key="@string/setting_net_proxy_user_password_key"
            android:title="@string/setting_net_proxy_user_password" />

        <EditTextPreference
            android:dependency="@string/setting_net_proxy_key"
            android:key="@string/setting_net_proxy_addr_ip_key"
            android:title="@string/setting_net_proxy_addr_ip" />

        <EditTextPreference
            android:dependency="@string/setting_net_proxy_key"
            android:key="@string/setting_net_proxy_addr_port_key"
            android:title="@string/setting_net_proxy_addr_port" />


    </PreferenceCategory>


    <PreferenceCategory android:title="@string/setting_other">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_other_device_rotation_entries"
            android:entryValues="@array/setting_other_device_rotation_values"
            android:key="@string/setting_other_device_default_rotation_key"
            android:title="@string/setting_other_device_default_rotation" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_other_device_rotation_entries"
            android:entryValues="@array/setting_other_device_rotation_values"
            android:key="@string/setting_other_device_rotation_fixed_offset_key"
            android:title="@string/setting_other_device_rotation_fixed_offset" />


        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_other_server_record_audio_key"
            android:summary="Recording call content on the server(Additional configuration required)"
            android:title="@string/setting_other_server_record_audio" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_other_server_record_video_key"
            android:summary="Recording call content on the server(Additional configuration required)"
            android:title="@string/setting_other_server_record_video" />

    </PreferenceCategory>

</PreferenceScreen>